# OCR

./: .gitignore  README.md  easyocr_requirements.txt  paddleocr_requirements.txt  pyproject.toml  setup.py
.github/workflows/: daily-ocr-test.yml  deploy-backend.yml
hf_backend/: Dockerfile  README.md  app.py  index.html  pyproject.toml  requirements.txt
hf_backend/app/: __init__.py  main.py
hf_backend/app/api/: routes.py
hf_backend/app/core/: config.py
hf_backend/app/db/: crud.py  database.py
hf_backend/app/services/: worker.py
ocr/: base.py  common.py  easyocr.py  paddleocr.py  runner.py
stitch_exact_html_converter/: DESIGN.md  code.html
